--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ function sendToKakao() {
   const name = document.getElementById("name").value;
   const phone = document.getElementById("phone").value;
   const message = encodeURIComponent(`안녕하세요. 상담 요청드립니다.%0A이름: ${name}%0A연락처: ${phone}`);
-  window.open("https://open.kakao.com/o/sRW8eAyh" + message, "_blank");
+  window.open("https://open.kakao.com/o/stpu8Dzh" + message, "_blank");
 }
 </script>
 
@@ -125,7 +125,7 @@ function sendToKakao() {
   const name = document.getElementById("name").value;
   const phone = document.getElementById("phone").value;
   const message = encodeURIComponent(`안녕하세요. 상담 요청드립니다.%0A이름: ${name}%0A연락처: ${phone}`);
-  window.open("https://open.kakao.com/o/sRW8eAyh" + message, "_blank");
+  window.open("https://open.kakao.com/o/stpu8Dzh" + message, "_blank");
 }
 </script>
 
@@ -195,7 +195,7 @@ function sendToKakao() {
 
   <script>
     function copyToClipboard() {
-      navigator.clipboard.writeText("https://open.kakao.com/o/sRW8eAyh").then(function() {
+      navigator.clipboard.writeText("https://open.kakao.com/o/stpu8Dzh").then(function() {
         alert("카카오톡 링크가 복사되었습니다!");
       }, function(err) {
         alert("복사에 실패했습니다. 수동으로 복사해주세요.");
@@ -206,7 +206,7 @@ function sendToKakao() {
   const name = document.getElementById("name").value;
   const phone = document.getElementById("phone").value;
   const message = encodeURIComponent(`안녕하세요. 상담 요청드립니다.%0A이름: ${name}%0A연락처: ${phone}`);
-  window.open("https://open.kakao.com/o/sRW8eAyh" + message, "_blank");
+  window.open("https://open.kakao.com/o/stpu8Dzh" + message, "_blank");
 }
 </script>
 
@@ -215,7 +215,7 @@ function sendToKakao() {
   <button onclick="scrollToTop()" id="topBtn" title="맨 위로" style="display:none;position:fixed;bottom:100px;right:20px;z-index:999;background:#6a1b9a;color:white;padding:12px 18px;border:none;border-radius:50px;cursor:pointer;">▲</button>
 
   <!-- 하단 고정 상담 버튼 -->
-  <a href="https://open.kakao.com/o/sRW8eAyh" target="_blank" style="position:fixed;bottom:20px;right:20px;background:#ffeb3b;color:#000;padding:12px 20px;border-radius:30px;font-weight:bold;text-decoration:none;z-index:999;box-shadow:0 2px 8px rgba(0,0,0,0.3);">
+  <a href="https://open.kakao.com/o/stpu8Dzh" target="_blank" style="position:fixed;bottom:20px;right:20px;background:#ffeb3b;color:#000;padding:12px 20px;border-radius:30px;font-weight:bold;text-decoration:none;z-index:999;box-shadow:0 2px 8px rgba(0,0,0,0.3);">
     💬 카카오톡 상담
   </a>
 
@@ -236,7 +236,7 @@ function sendToKakao() {
     }
 
     function copyToClipboard() {
-      navigator.clipboard.writeText("https://open.kakao.com/o/sRW8eAyh").then(function() {
+      navigator.clipboard.writeText("https://open.kakao.com/o/stpu8Dzh").then(function() {
         alert("카카오톡 링크가 복사되었습니다!");
       }, function(err) {
         alert("복사에 실패했습니다. 수동으로 복사해주세요.");
@@ -247,7 +247,7 @@ function sendToKakao() {
       const name = document.getElementById("name").value;
       const phone = document.getElementById("phone").value;
       const message = encodeURIComponent(`안녕하세요. 상담 요청드립니다.%0A이름: ${name}%0A연락처: ${phone}`);
-      window.open("https://open.kakao.com/o/sRW8eAyh" + message, "_blank");
+      window.open("https://open.kakao.com/o/stpu8Dzh" + message, "_blank");
     }
   </script>
 </body>
