--- a/index.html
+++ b/index.html
@@ -251,6 +251,16 @@ function sendToKakao() {
       window.open("https://open.kakao.com/o/stpu8Dzh" + message, "_blank");
     }
   </script>
+  <!--  ClickCease.com tracking-->
+      <script type='text/javascript'>var script = document.createElement('script');
+      script.async = true; script.type = 'text/javascript';
+      var target = 'https://www.clickcease.com/monitor/stat.js';
+      script.src = target;var elem = document.head;elem.appendChild(script);
+      </script>
+      <noscript>
+      <a href='https://www.clickcease.com' rel='nofollow'><img src='https://monitor.clickcease.com' alt='ClickCease'/></a>
+      </noscript>
+      <!--  ClickCease.com tracking-->
 </body>
 
 
